--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -54,6 +54,8 @@
 @import './page/_seami-congchung';
 @import './page/_seami-sukien';
 @import './page/_gallery';
+@import './page/_hoptac-nhuongquyen';
+@import './page/_thongtin-chusohuu';
 
 
 
