--- a/template/seami-congchung-chitiet-2.html
+++ b/template/seami-congchung-chitiet-2.html
@@ -358,7 +358,7 @@
         </header>
         <main class="main">
 
-            <section class="seami-public">
+            <section class="seami-public seami-public-post">
                 <div class="container">
                     <div class="lic-wrapper">
 
@@ -368,110 +368,151 @@
                                     <div class="lic-post">
                                         <div class="post-main">
                                             <p class="seami-label f-bold main-cl f-dancing">
-                                                Blog
+                                                Sự kiện
                                             </p>
                                             <h3 class="lic-title tt-36 f-normal t-uppercase">
-                                                NHỮNG BẢN COVER NGÂY NGẤT LÒNG NGƯỜI ĐẾN TỪ CÁC “GÀ NHÀ” CỦA SEAMI
+                                                Hội thảo du học “Cơ hội và thách thức với ngành nghệ thuật trong thời
+                                                đại hậu covid”
                                             </h3>
-                                            <div class="lic-head">
-                                                <div class="lic-account">
-                                                    <div class="account-img">
-                                                        <img src="./img/lic-avtara.png" alt="lic-avtara.png">
-                                                    </div>
-                                                    <p class="account-name tt-12 f-bold">
-                                                        Nguyễn Anh Tuấn
-                                                    </p>
-                                                </div>
 
-                                                <div class="lic-act">
-                                                    <a href="#" class="lic-share">
-                                                        <img src="./img/svg/icon-share.svg" alt="icon-share.svg">
-                                                    </a>
-
-                                                    <div class="lic-like">
-                                                        <p class="f-light t-like">10 lượt thích</p>
-                                                    </div>
-
-                                                </div>
-                                            </div>
                                             <div class="lic-text mona-content">
-                                                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
-                                                    lectus
-                                                    nunc venenatis id in aliquet.</h4>
-                                                <p>
-                                                    Ipsum facilisis pretium enim, sit etiam ac. Iaculis sed nam lectus
-                                                    quis
-                                                    vulputate dictumst ut semper interdum. Curabitur posuere arcu odio
-                                                    aliquet.
-                                                </p>
-                                                <p>Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
-                                                    quam. Mi
-                                                    aliquet eget vel tempus nascetur. Purus eu a aliquet et ut urna vel.
-                                                    Faucibus diam montes, donec et, pretium bibendum non velit
-                                                    dignissim.
-                                                    Ornare turpis faucibus sed a in. </p>
-                                                <div class="video-box bx-video">
-                                                    <video id="my-video">
-                                                        <source src="./img/video.mp4" type="video/mp4" />
-                                                    </video>
+                                                <div class="lic-bx-title">
+                                                    <h4 class=" t-uppercase f-bold">
+                                                        Hội Thảo Du Học: “CƠ HỘI VÀ THÁCH THỨC VỚI NGÀNH NGHỆ THUẬT
+                                                        TRONG THỜI ĐẠI HẬU COVID”
+                                                    </h4>
+                                                    <ul class="bx-title-list">
+                                                        <li class="bx-title-item">
+                                                            Event Schedule Th8 01, 2020 At 09:00 AM To Th8 01, 2020 At
+                                                            12:00 PM
+                                                        </li>
+                                                        <li class="bx-title-item">
+                                                            Location116 Nguyễn Văn Thủ, Quận 1
+                                                        </li>
+                                                    </ul>
                                                 </div>
 
-                                                <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
-                                                    lectus nunc venenatis id in aliquet.</h4>
-                                                <p>Ipsum facilisis pretium enim, sit etiam ac. Iaculis sed nam lectus
-                                                    quis vulputate dictumst ut semper interdum. Curabitur posuere arcu
-                                                    odio aliquet.
+                                                <p class="f-round">
+                                                    Bạn hoàn toàn có cơ hội để nhận được học bổng tại Full Sail
+                                                    University nơi mà trong suốt 25 năm qua,
+
+                                                    <span class="f-bold">
+                                                        sinh viên tốt nghiệp từ ngôi trường này đã tham dự 18 sản phẩm
+                                                        âm nhạc đoạt giải Grammy – Album of the Year!!!
+                                                    </span>
                                                 </p>
-                                                <p>
-                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
-                                                    quam. Mi aliquet eget vel tempus nascetur. Purus eu a aliquet et ut
-                                                    urna vel. Faucibus diam montes, donec et, pretium bibendum non velit
-                                                    dignissim. Ornare turpis faucibus sed a in.
-                                                </p>
+
                                                 <div class="post-ig">
-                                                    <img src="./img/lic-post-big-1.png" alt="lic-post-big-1.png">
+                                                    <img src="./img/lic-post-big-2.png" alt="lic-post-big-2.png">
                                                 </div>
 
-                                                <h4>
-                                                    Lorem ipsum dolor sit amet
-                                                </h4>
                                                 <p>
-                                                    consectetur adipiscing elit. Faucibus lectus nunc venenatis id in
-                                                    aliquet. Ipsum facilisis pretium enim, sit etiam ac. Iaculis sed nam
-                                                    lectus quis vulputate dictumst ut semper interdum. Curabitur posuere
-                                                    arcu odio aliquet.
+                                                    Vì sự phát triển của ngành nghệ thuật tại Việt Nam, thực hiện Sứ
+                                                    Mệnh của SEAMI “Phổ Cập và Nâng Tầm Thẩm Mỹ Âm Nhạc cho công chúng”,
+                                                    cũng như mang thêm nhiều cơ hội cho Anh/Chị/Em yêu thích âm nhạc
+                                                    muốn nâng tầm hoặc phát triển sự nghiệp Nghệ thuật của mình, Học
+                                                    viện âm nhạc SEAMI hợp tác với Công ty TVDH Interlink liên kết với
+                                                    Full Sail University tổ chức buổi hội thảo “CƠ HỘI VÀ THÁCH THỨC NÀO
+                                                    VỚI NGÀNH NGHỆ THUẬT TRONG THỜI ĐẠI HẬU COVID”. Những phần học bổng
+                                                    con số hấp dẫn lên đến hàng trăm triệu Việt Nam Đồng cho các chuyên
+                                                    ngành.
+                                                </p>
+                                                <p>
+                                                    Nếu bạn quan tâm và tự tin vào tài năng của mình, thì chắc chắn bạn
+                                                    không nên bỏ qua hội thảo này.
+                                                </p>
+                                                <div class="post-line"></div>
+
+                                                <ul class="list-ps">
+                                                    <li class="item-ps">
+                                                        TẠI BUỔI HỘI THẢO, BẠN SẼ:
+                                                    </li>
+                                                    <li class="item-ps">
+                                                        –  &emsp; Nắm qua sơ lược về dự báo, tiềm năng, cơ hội cũng như thách thức
+                                                        đối với nhóm ngành “công nghiệp văn hoá”, mà điển hình bàn luận
+                                                        chuyên sâu về Âm nhạc.
+                                                    </li>
+                                                    <li class="item-ps">
+                                                        –  &emsp; Phân tích tất tần tật mọi thông tin chuyên ngành giải trí, âm
+                                                        nhạc du học tại <span class="f-bold">Full Sail
+                                                            University.</span>
+                                                    </li>
+                                                    <li class="item-ps">
+                                                        –  &emsp;   Lý do tại sao bạn nên lựa chọn <span class="f-bold">Full Sail
+                                                            University</span> làm điểm đến
+                                                        du học.
+                                                    </li>
+                                                    <li class="item-ps">
+                                                        –  &emsp; Mức học bổng ưu trị giá đãi cao ngất ngưỡng. Điều kiện là gì?
+                                                    </li>
+                                                    <li class="item-ps">
+                                                        –  &emsp; Điều kiện để đăng kí học tại <span class="f-bold">Full Sail
+                                                            University</span> là gì?
+                                                    </li>
+
+                                                </ul>
+
+                                                <p>
+                                                    Hội thảo du học: “CƠ HỘI VÀ THÁCH THỨC VỚI NGÀNH NGHỆ THUẬT TRONG
+                                                    THỜI ĐẠI HẬU COVID” 2 Giá vé: <span class="f-bold">Tặng Free cho 25
+                                                        người đầu tiên đăng
+                                                        ký!</span> <br>
+                                                    Từ người 26 trở đi: 65.000₫/vé tham dự (đã bao gồm 1 phần nước uống)
+                                                    + tài liệu hội thảo.
+                                                </p>
+                                                <br>
+                                                <div class="post-line "></div>
+                                                <br>
+                                                <ul class="list-ifn">
+                                                    <li class="item-ifn">
+                                                        Thông tin chi tiết về Hội thảo
+                                                    </li>
+                                                    <li class="item-ifn">
+                                                        Thời gian: <span class="f-bold">09:00 sáng ngày
+                                                            01/08/2020</span>
+                                                    </li>
+                                                    <li class="item-ifn">
+                                                        Địa điểm: <span class="f-bold">116 Nguyễn Văn Thủ, P. Đa Kao,
+                                                            Q.1, TpHCM</span>
+                                                    </li>
+                                                    <br>
+                                                    <li class="item-ifn">
+                                                        👉<span class="f-bold">Đăng kí:</span>
+                                                        <a href="#">
+                                                            https://forms.gle/Pmg9fMJApXYxqchP8
+                                                        </a>
+                                                    </li>
+                                                </ul>
+                                                <br>
+                                                <div class="post-line"></div>
+                                                <br>
+                                                <p>
+                                                    Liên hệ để biết thêm chi tiết
                                                 </p>
 
+                                                <p>
+                                                    <span class="f-bold">Facebook:</span> <a href="#">http://m.me/seami.vn</a>
+                                                </p>
 
-                                                <div class="lic-note">
-                                                    <img src="./img/svg/icon-comma.svg" alt="icon-comma.svg">
-                                                    <p>
-                                                        Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
-                                                        quam. Mi aliquet eget vel tempus nascetur. Purus eu a aliquet et
-                                                        ut urna vel. Faucibus diam montes, donec et, pretium bibendum
-                                                        non velit dignissim. Ornare turpis faucibus sed a in.
-                                                    </p>
+                                                <p>
+                                                    <span class="f-bold">SĐT:</span> <a href="tel:(028)73030369 ">(028)7.30.30.369 </a>
+                                                </p>
+                                                <br>
+                                                <div class="post-line"></div>
+                                                <br>
+                                                <p>*Hình ảnh thông tin về trường Full Sail University</p>
+
+                                                <div class="post-ig">
+                                                    <img src="./img/lic-post-big-3.png" alt="lic-post-big-3.png">
                                                 </div>
-                                                <p>Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
-                                                    quam. Mi
-                                                    aliquet eget vel tempus nascetur. Purus eu a aliquet et ut urna vel.
-                                                    Faucibus diam montes, donec et, pretium bibendum non velit
-                                                    dignissim.
-                                                    Ornare turpis faucibus sed a in. </p>
-
-                                                <div class="post-img">
-                                                    <img src="./img/lic-post-1.png" alt="lic-post-1.png">
-                                                    <img src="./img/lic-post-2.png" alt="lic-post-2.png">
+                                                <div class="post-ig">
+                                                    <img src="./img/lic-post-big-4.png" alt="lic-post-big-4.png">
                                                 </div>
-
-                                                <h4>
-                                                    Lorem ipsum dolor sit amet
-                                                </h4>
-                                                <p>consectetur adipiscing elit. Faucibus lectus nunc venenatis id in
-                                                    aliquet. Ipsum facilisis pretium enim, sit etiam ac. Iaculis sed nam
-                                                    lectus quis vulputate dictumst ut semper interdum. Curabitur posuere
-                                                    arcu odio aliquet.</p>
+                                                <div class="post-ig">
+                                                    <img src="./img/lic-post-big-5.png" alt="lic-post-big-5.png">
+                                                </div>
                                             </div>
+                                            
                                             <div class="lic-tag">
                                                 <div class="tag-box">
                                                     <a href="#">
@@ -968,15 +1009,15 @@
                                         </div>
                                     </div>
                                     <div class="swiper-pagination"></div>
+                                </div>
                             </div>
+
+
+
+
+
                         </div>
-
-
-
-
-
                     </div>
-                </div>
             </section>
 
         </main>
