--- a/template/cauhoi-thuonggap.html
+++ b/template/cauhoi-thuonggap.html
@@ -358,115 +358,185 @@
         </header>
         <main class="main">
 
-            <section class="gallery-seami">
+            <section class="frequent-question">
                 <div class="container">
-                    <div class="gallery-wrapper ">
-                        <div class="gallery-head t-center">
-                            <p class="seami-label f-dancing f-bold main-cl">
-                                Hình ảnh
-                            </p>
-                            <h3 class="gallery-title tt-36 t-uppercase f-normal">
-                                Gallery
-                            </h3>
-                        </div>
+                    <div class="question-wrapper">
+                        <p class="seami-label main-cl f-bold f-dancing">
+                            FAQs
+                        </p>
+                        <h3 class="question-title f-light tt-36 t-center t-uppercase wow animate__bounceIn">
+                            CÁC CÂU HỎI THƯỜNG GẶP
+                        </h3>
 
-                        <div class="gallery-content" id="lightgallery">
+                        <div class="question-main">
                             <div class="columns">
-                                <div class="column">
-                                    <div class="gallery-box">
-                                        <a href="img/img-gallery-1.png" class="gallery-img">
-                                            <img src="./img/img-gallery-1.png" alt="img-gallery-1.png">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="gallery-inner">
-                                        <div class="columns">
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-2.png" class="gallery-img ">
-                                                        <img src="./img/img-gallery-2.png" alt="img-gallery-2.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img//img-gallery-3.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-3.png" alt="img-gallery-3.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-4.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-4.png" alt="img-gallery-4.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-5.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-5.png" alt="img-gallery-5.png">
-                                                    </a>
-                                                </div>
+                                <div class="column" data-aos="fade-right">
+                                    <div class="question-inner">
+                                        <div class="question-box">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Faucibus lectus nunc venenatis id in aliquet ?
+
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
                                             </div>
                                         </div>
-                                    </div>
-
-
-                                </div>
-                            </div>
-
-                            <div class="columns">
-                                <div class="column">
-                                    <div class="gallery-box">
-                                        <a href="img/img-gallery-10.png" class="gallery-img">
-                                            <img src="./img/img-gallery-10.png" alt="img-gallery-10.png">
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="gallery-inner">
-                                        <div class="columns">
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-6.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-6.png" alt="img-gallery-6.png">
-                                                    </a>
-                                                </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
                                             </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-7.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-7.png" alt="img-gallery-7.png">
-                                                    </a>
-                                                </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt  tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Faucibus lectus nunc venenatis id in aliquet ?
+
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
                                             </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-8.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-8.png" alt="img-gallery-8.png">
-                                                    </a>
-                                                </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
                                             </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-9.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-9.png" alt="img-gallery-9.png">
-                                                    </a>
-                                                </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Faucibus lectus nunc venenatis id in aliquet ?
+
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                
+                                <div class="column" data-aos="fade-left">
+                                    <div class="question-inner">
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Faucibus lectus nunc venenatis id in aliquet ?
+
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Faucibus lectus nunc venenatis id in aliquet ?
+
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="question-box ">
+                                            <h4 class="question-tt tt-16 f-bold">
+                                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                                Faucibus lectus nunc venenatis id in aliquet ?
+
+                                            </h4>
+                                            <div class="question-content ">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus
+                                                    lectus nunc venenatis id in aliquet. Ipsum facilisis pretium
+                                                    enim, sit etiam ac. Iaculis sed nam lectus
+                                                    <br> <br>
+                                                    Eget nisl, vestibulum morbi scelerisque nisi eget faucibus ipsum
+                                                    quam. Mi aliquet eget vel tempus nascetur.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+
 
                     </div>
                 </div>
             </section>
-
 
         </main>
         <footer class="footer sec-100 --pb-0">
