--- a/template/sass/page/__dongngu-giaovien-detail.scss
+++ b/template/sass/page/__dongngu-giaovien-detail.scss
@@ -1,6 +1,7 @@
 .team-teacher-detail {
     padding: 60px 0 80px;
     overflow: hidden;
+
     @include max-media($bk-d-1200) {
         padding: 60px 0;
     }
@@ -24,20 +25,24 @@
     .column {
         &.teacher-ig {
             width: calc(100% / 12 * 3);
-            @include max-media($bk-d-992){
+
+            @include max-media($bk-d-992) {
                 width: calc(100% / 12 * 3.5);
             }
-            @include max-media($bk-d-768){
+
+            @include max-media($bk-d-768) {
                 width: 100%;
             }
         }
 
         &.teacher-tx {
             width: calc(100% / 12 * 9);
-            @include max-media($bk-d-992){
+
+            @include max-media($bk-d-992) {
                 width: calc(100% / 12 * 8.5);
             }
-            @include max-media($bk-d-768){
+
+            @include max-media($bk-d-768) {
                 width: 100%;
             }
         }
@@ -45,7 +50,8 @@
 
     .teacher-avatar {
         margin-bottom: 15px;
-        @include max-media($bk-d-768){
+
+        @include max-media($bk-d-768) {
             width: 50%;
             margin: 0 auto 15px;
         }
@@ -66,7 +72,8 @@
 
         .teacher-name {
             margin-bottom: 35px;
-            @include max-media($bk-d-992){
+
+            @include max-media($bk-d-992) {
                 margin-bottom: 20px;
             }
         }
@@ -106,15 +113,18 @@
         }
     }
 
-    .teacher-inner{
+    .teacher-inner {
         padding-left: 40px;
-        @include max-media($bk-d-1200){
+
+        @include max-media($bk-d-1200) {
             padding-left: 20px;
         }
-        @include max-media($bk-d-992){
+
+        @include max-media($bk-d-992) {
             padding-left: 10px;
         }
-        @include max-media($bk-d-768){
+
+        @include max-media($bk-d-768) {
             padding-left: 0;
         }
     }
@@ -123,14 +133,16 @@
 
         &:not(:first-child) {
             margin-top: 25px;
-            @include max-media($bk-d-1024){
+
+            @include max-media($bk-d-1024) {
                 margin-top: 20px;
             }
         }
 
         .teacher-tt {
             margin-bottom: 15px;
-            @include max-media($bk-d-1024){
+
+            @include max-media($bk-d-1024) {
                 margin-bottom: 10px;
             }
         }
@@ -139,10 +151,12 @@
             display: flex;
             flex-wrap: wrap;
             margin: 0 -25px;
-            @include max-media($bk-d-1200){
-                margin:  0 -15px;
+
+            @include max-media($bk-d-1200) {
+                margin: 0 -15px;
             }
-            @include max-media($bk-d-992){
+
+            @include max-media($bk-d-992) {
                 margin: 0;
             }
         }
@@ -150,16 +164,18 @@
         .teacher-col {
             width: 50%;
             padding: 0 25px;
-            @include max-media($bk-d-1200){
+
+            @include max-media($bk-d-1200) {
                 padding: 0 15px;
             }
-            @include max-media($bk-d-992){
+
+            @include max-media($bk-d-992) {
                 width: 100%;
                 padding: 0;
             }
 
-            &.mt-20{
-                @include max-media($bk-d-992){
+            &.mt-20 {
+                @include max-media($bk-d-992) {
                     margin-top: 20px;
                 }
             }
@@ -177,8 +193,9 @@
             border: 1px solid rgba($color: $b-cl, $alpha: .1);
             border-radius: 4px;
             width: 100%;
+
             tr {
-                &:first-child{
+                &:first-child {
                     td {
                         border-top: none;
                     }
@@ -187,9 +204,11 @@
 
             td {
                 border-top: 1px solid rgba($color: $b-cl, $alpha: .1);
+
                 &:not(:first-child) {
                     border-left: 1px solid rgba($color: $b-cl, $alpha: .1);
                 }
+
                 padding: 13px 25px;
 
                 .teacher-star {
@@ -205,7 +224,8 @@
     &.block-t-contact {
         padding: 25px;
         border-radius: 4px;
-        @include max-media($bk-d-768){
+
+        @include max-media($bk-d-768) {
             padding: 20px;
         }
 
@@ -226,211 +246,219 @@
         }
     }
 
+    .teacher-form {
 
-    .teacher-group {
-        width: 100%;
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        .teacher-group {
+            width: 100%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: space-between;
+            flex-wrap: wrap;
 
-        &:not(:first-child) {
-            margin-top: 35px;
-            @include max-media($bk-d-1024){
-                margin-top: 25px;
-            }
-            @include max-media($bk-d-768){
-                margin-top: 0;
-            }
-        }
+            &:not(:first-child) {
+                margin-top: 35px;
 
-        &:first-child{
-            .teacher-f{
-                &:first-child{
+                @include max-media($bk-d-1024) {
+                    margin-top: 25px;
+                }
+
+                @include max-media($bk-d-768) {
                     margin-top: 0;
+                }
+            }
+
+            &:first-child {
+                .teacher-f {
+                    &:first-child {
+                        margin-top: 0;
+                    }
+                }
+            }
+
+            .teacher-f {
+                width: calc(50% - 15px);
+
+                @include max-media($bk-d-768) {
+                    width: 100%;
+                    margin-top: 25px;
                 }
             }
         }
 
         .teacher-f {
-            width: calc(50% - 15px);
-            @include max-media($bk-d-768){
+            width: 100%;
+            position: relative;
+
+            .label {
+                font-size: 12px;
+                font-weight: 300;
+                color: rgba($color: $b-cl, $alpha: .5);
+            }
+
+            .t-note {
+                color: $main-cl;
+                font-size: 12px;
+                font-weight: 300;
+                position: absolute;
+                bottom: -5px;
+                left: 0;
+                transform: translateY(100%);
+            }
+
+            .f-control {
+                border: none;
+                border-bottom: 1px solid rgba($color: $b-cl, $alpha: .2);
+                padding: 5px 0;
+                border-radius: 0px;
+                height: auto;
+
+                &:hover,
+                &:focus {
+                    border-color: $main-cl;
+                }
+
+                &::placeholder {
+                    color: rgba($color: $b-cl, $alpha: .6);
+                    font-weight: 300;
+                }
+            }
+
+            .f-select {
                 width: 100%;
+                border: 1px solid rgba($color: $b-cl, $alpha: .1);
+                border-radius: 99px;
+                background-image: url('../img/svg/icon-down.svg');
+                background-position: right 25px center;
+                background-repeat: no-repeat;
+                display: block;
+                padding: 12px 25px;
+                outline: none;
+                cursor: pointer;
+                transition: all .3s ease;
+
+                &:hover,
+                &:focus {
+                    border-color: $main-cl;
+                }
+            }
+        }
+
+        .mt-35 {
+            margin-top: 35px;
+
+            @include max-media($bk-d-1024) {
                 margin-top: 25px;
             }
         }
-    }
 
-    .teacher-f {
-        width: 100%;
-        position: relative;
+        textarea.f-control {
+            border-radius: 4px;
+            border-color: rgba($color: $b-cl, $alpha: .2);
+            padding: 20px 25px;
+            height: 100px !important;
+            resize: none;
 
-        .label {
-            font-size: 12px;
-            font-weight: 300;
-            color: rgba($color: $b-cl, $alpha: .5);
-        }
-
-        .t-note {
-            color: $main-cl;
-            font-size: 12px;
-            font-weight: 300;
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            transform: translateY(100%);
-        }
-
-        .f-control {
-            border: none;
-            border-bottom: 1px solid rgba($color: $b-cl, $alpha: .2);
-            padding: 5px 0;
-            border-radius: 0px;
-            height: auto;
-
-            &:hover,
-            &:focus {
-                border-color: $main-cl;
+            @include max-media($bk-d-768) {
+                padding: 10px 15px;
             }
 
             &::placeholder {
                 color: rgba($color: $b-cl, $alpha: .6);
                 font-weight: 300;
             }
-        }
-
-        .f-select {
-            width: 100%;
-            border: 1px solid rgba($color: $b-cl, $alpha: .1);
-            border-radius: 99px;
-            background-image: url('../img/svg/icon-down.svg');
-            background-position: right 25px center;
-            background-repeat: no-repeat;
-            display: block;
-            padding: 12px 25px;
-            outline: none;
-            cursor: pointer;
-            transition: all .3s ease;
 
             &:hover,
             &:focus {
                 border-color: $main-cl;
             }
         }
-    }
 
-    .mt-35 {
-        margin-top: 35px;
-        @include max-media($bk-d-1024){
-            margin-top: 25px;
-        }
-    }
+        .teacher-accept {
+            margin-top: 23px;
 
-    textarea.f-control {
-        border-radius: 4px;
-        border-color: rgba($color: $b-cl, $alpha: .2);
-        padding: 20px 25px;
-        height: 100px !important;
-        resize: none;
-        @include max-media($bk-d-768){
-            padding: 10px 15px;
-        }
+            @include max-media($bk-d-768) {
+                margin-top: 15px;
+            }
 
-        &::placeholder {
-            color: rgba($color: $b-cl, $alpha: .6);
-            font-weight: 300;
-        }
+            .label {
+                input {
+                    display: none;
 
-        &:hover,
-        &:focus {
-            border-color: $main-cl;
-        }
-    }
-
-    .teacher-accept {
-        margin-top: 23px;
-        @include max-media($bk-d-768){
-            margin-top: 15px;
-        }
-
-        .label {
-            input {
-                display: none;
-
-                &:checked+.accept-box {
-                    .checkmark {
-                        &::after {
-                            @include visible;
+                    &:checked+.accept-box {
+                        .checkmark {
+                            &::after {
+                                @include visible;
+                            }
                         }
                     }
                 }
-            }
 
-            .accept-box {
-                display: flex;
-                align-items: center;
-                cursor: pointer;
+                .accept-box {
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
 
-                .checkmark {
-                    position: relative;
-                    border-radius: 4px;
-                    border: 1px solid rgba($color: $b-cl, $alpha: .2);
-                    width: 14px;
-                    height: 14px;
-                    display: inline-block;
-                    margin-right: 11px;
+                    .checkmark {
+                        position: relative;
+                        border-radius: 4px;
+                        border: 1px solid rgba($color: $b-cl, $alpha: .2);
+                        width: 14px;
+                        height: 14px;
+                        display: inline-block;
+                        margin-right: 11px;
 
-                    &::after {
-                        content: '\f00c';
-                        font-family: 'Fontawesome';
-                        @include pos-mid;
-                        font-size: 8px;
-                        @include hidden;
+                        &::after {
+                            content: '\f00c';
+                            font-family: 'Fontawesome';
+                            @include pos-mid;
+                            font-size: 8px;
+                            @include hidden;
+                        }
                     }
-                }
 
-                p {
-                    opacity: .6;
+                    p {
+                        opacity: .6;
+                    }
+
+                }
+            }
+        }
+
+        .f-submit {
+            margin-top: 23px;
+            width: 170px;
+            height: 46px;
+            border-radius: 99px;
+            background-color: $main-cl;
+            color: $w-cl;
+            padding: 15px 0;
+            text-transform: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+
+            @include max-media($bk-d-768) {
+                margin-top: 15px;
+            }
+
+            &:hover {
+                color: $main-cl;
+                background-color: $w-cl;
+
+                img {
+                    filter: none;
                 }
 
             }
-        }
-    }
 
-    .f-submit {
-        margin-top: 23px;
-        width: 170px;
-        height: 46px;
-        border-radius: 99px;
-        background-color: $main-cl;
-        color: $w-cl;
-        padding: 15px 0;
-        text-transform: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        @include max-media($bk-d-768){
-            margin-top: 15px;
-        }
-
-        &:hover {
-            color: $main-cl;
-            background-color: $w-cl;
 
             img {
-                filter: none;
+                filter: brightness(0) invert(1);
+                margin-left: 13px;
+                transition: all .3s ease;
             }
 
         }
-
-
-        img {
-            filter: brightness(0) invert(1);
-            margin-left: 13px;
-            transition: all .3s ease;
-        }
-
     }
-
 }
