--- a/template/thongtin-chusohuu.html
+++ b/template/thongtin-chusohuu.html
@@ -358,114 +358,83 @@
         </header>
         <main class="main">
 
-            <section class="gallery-seami">
+            <section class="information-website">
                 <div class="container">
-                    <div class="gallery-wrapper ">
-                        <div class="gallery-head t-center">
+                    <div class="web-wrapper">
+                        <div class="web-head t-center">
                             <p class="seami-label f-dancing f-bold main-cl">
-                                Hình ảnh
+                                Thông tin
                             </p>
-                            <h3 class="gallery-title tt-36 t-uppercase f-normal">
-                                Gallery
+                            <h3 class="web-title tt-36 t-uppercase f-normal ">
+                                THÔNG TIN CHỦ SỞ HỮU WEBSITE
                             </h3>
                         </div>
 
-                        <div class="gallery-content" id="lightgallery">
-                            <div class="columns">
-                                <div class="column">
-                                    <div class="gallery-box">
-                                        <a href="img/img-gallery-1.png" class="gallery-img">
-                                            <img src="./img/img-gallery-1.png" alt="img-gallery-1.png">
+                        <div class="web-main">
+                            <ul class="web-list">
+                                <li class="web-item">
+                                    <p class="web-tt f-bold tt-16">
+                                        Website seami.vn thuộc chủ sở hữu:
+                                        <span class="t-uppercase">
+                                            CÔNG TY CỔ PHẦN ĐẦU TƯ VÀ PHÁT TRIỂN GIÁO DỤC
+                                            NGHỆ THUẬT ĐÔNG NAM Á
+                                        </span>
+                                    </p>
+                                </li>
+                                <li class="web-item">
+                                    <p class="web-text f-light">
+                                        Người đại diện:
+                                        <span class="t-capitalize f-bold">
+                                            Nguyễn Anh Tuấn
+                                        </span>
+                                    </p>
+                                </li>
+                                <li class="web-item">
+                                    <p class="web-text f-light">
+                                        Giấy phép kinh doanh (Mã số thuế)
+                                        <span class=" f-bold">
+                                            0312712732
+                                        </span>
+                                    </p>
+                                </li>
+                                <li class="web-item">
+                                    <p class="web-text f-light">
+                                        Cấp ngày
+                                        <span class=" f-bold">
+                                            15/12/2017
+                                        </span>
+                                        tại Sở kế hoạch và Đầu tư TPHCM
+                                    </p>
+                                </li>
+                                <li class="web-item">
+                                    <p class="web-text f-light">
+                                        Địa chỉ: 7A/2 Nguyễn Thị Minh Khai, Phương Bến Nghé, Quận 1, Thành phố Hồ Chí
+                                        Minh, Việt Nam
+                                    </p>
+                                </li>
+                                <li class="web-item">
+                                    <p class="web-text f-light">
+                                        Số điện thoại:
+                                        <a href="tel:(028)73030369" class="web-link main-cl f-bold">
+                                            (028)7.30.30.369
                                         </a>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="gallery-inner">
-                                        <div class="columns">
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-2.png" class="gallery-img ">
-                                                        <img src="./img/img-gallery-2.png" alt="img-gallery-2.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img//img-gallery-3.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-3.png" alt="img-gallery-3.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-4.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-4.png" alt="img-gallery-4.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-5.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-5.png" alt="img-gallery-5.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                </div>
-                            </div>
-
-                            <div class="columns">
-                                <div class="column">
-                                    <div class="gallery-box">
-                                        <a href="img/img-gallery-10.png" class="gallery-img">
-                                            <img src="./img/img-gallery-10.png" alt="img-gallery-10.png">
+                                    </p>
+                                </li>
+                                <li class="web-item">
+                                    <p class="web-text f-light">
+                                        Email:
+                                        <a href="mailto:info@seami.world" class="web-link main-cl f-bold">
+                                            info@seami.world
                                         </a>
-                                    </div>
-                                </div>
-                                <div class="column">
-                                    <div class="gallery-inner">
-                                        <div class="columns">
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-6.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-6.png" alt="img-gallery-6.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-7.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-7.png" alt="img-gallery-7.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-8.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-8.png" alt="img-gallery-8.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                            <div class="column">
-                                                <div class="gallery-box">
-                                                    <a href="img/img-gallery-9.png" class="gallery-img">
-                                                        <img src="./img/img-gallery-9.png" alt="img-gallery-9.png">
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                
-                            </div>
+                                    </p>
+                                </li>
                         </div>
-
                     </div>
                 </div>
             </section>
+
+
+
 
 
         </main>
